# STM32F4_lvgl

./: CMakeLists.txt  README.md  gcc-arm-none-eabi.cmake
inc/: lcd.h  lv_conf.h  spi.h
src/: lcd.c  main.c  spi.c  timer.c
